z-index solved at minSida

--- a/client/src/css/MinSida.css
+++ b/client/src/css/MinSida.css
@@ -75,13 +75,15 @@ margin-right: 5%;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
+    position: relative;
+    z-index: -5;
    
-    
-   
-  
     
 }
+
+
+
+
 
 .userOptions {
     display: flex;
@@ -89,6 +91,7 @@ margin-right: 5%;
     margin: 2%;
     margin-left: 35%;
     flex-direction: row;
+    z-index: -1;
    
 }
 
